chore: bulk changes